# pyflightstream

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  STATUS.md  conftest.py  logbook.csv  mkdocs.yml  plan.csv  properdocs.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: api-designer.md  architect-reviewer.md  incident-analyst.md  qa-engineer.md  tech-writer.md  vv-engineer.md
.claude/hooks/: role_review_gate.py  write_attestation.py
.github/workflows/: ci.yml  docs.yml  release.yml
deprecated/: README.md
docs/: index.md  mesh-inputs.md  sister-itaca.md
docs/srs/: architecture-srs.md  data-model.md  functional-requirements.md  index.md  introduction.md  nonfunctional-requirements.md  philosophy.md  roadmap.md  scope.md  standards.md
docs/stylesheets/: extra.css
examples/: campaign_matrix.py  fsi_campbell_diagram.py  steady_polar.py  wing_static_deflection.py
guide/: pyflightstream_user_guide.tex
handoffs/: HND-001_session-protocol-setup_2026-07-21.md  HND-002_m1-command-database_2026-07-21.md  HND-003_m2-script-builder-core_2026-07-21.md  HND-004_m2-curated-helpers_2026-07-21.md  HND-005_m2-files-and-local-executor_2026-07-21.md  HND-006_m2-cases-and-campaign-loop_2026-07-21.md  HND-007_m2-results-parsers-and-assessor_2026-07-21.md  HND-008_m2-exit-real-run_2026-07-21.md  HND-009_m2-closed-legacy-matrix-reader_2026-07-21.md  HND-010_m3-probe-harness-pilot-compat_2026-07-21.md  HND-011_m3-closed-full-compat-sweep_2026-07-21.md  HND-012_m4-opened-phy01-end-to-end_2026-07-21.md  HND-013_phy02-closed-symmetry-equivalence_2026-07-21.md  HND-014_drift-suite-delivered-26100-backfill_2026-07-21.md  HND-015_m4-closed-smi-drift-class_2026-07-21.md  HND-016_m5-docs-site-delivered-smi01-triage-closed_2026-07-21.md  HND-017_v010-tagged_2026-07-21.md  HND-018_beamer-user-guide_2026-07-21.md  HND-019_legacy-case-reproduction-fts-sim_2026-07-21.md  HND-020_farfield-probes-ledgers-g0_2026-07-21.md  HND-021_m6-fsi-structural-branch_2026-07-21.md  HND-022_generic-blade-case-9002_2026-07-21.md  HND-023_planar-probe-grids-geometry-gate_2026-07-21.md  HND-024_probe-roundtrip-order-verified_2026-07-21.md  HND-025_phy05-phy06-tier3_2026-07-21.md  HND-026_fsi-dry-run-executed_2026-07-21.md  HND-027_bl-columns-corrected-standoff-margin_2026-07-21.md  HND-028_phy06-polar-trend_2026-07-21.md  HND-029_wp2-wp5-wp6-fsi-offline-branch_2026-07-21.md  HND-030_wp7-nearrigid-pilot-m6-exit_2026-07-21.md  HND-031_soft-pilot-morphing-blocked_2026-07-21.md  HND-032_v020-public-release_2026-07-22.md  HND-033_credential-hygiene-session-close_2026-07-22.md  HND-034_remote-control-usage-triage_2026-07-22.md  HND-035_usage-feedback-execution_2026-07-22.md
reports/: RPT-001_m2-exit-real-run_2026-07-21.md  RPT-002_pynitefea-license_2026-07-21.md  RPT-003_geom-extra-licenses_2026-07-21.md  RPT-004_probe-roundtrip-order_2026-07-21.md  RPT-005_fsi-dry-run_2026-07-21.md  RPT-006_wp7-nearrigid-pilot_2026-07-21.md  RPT-007_soft-pilot-morphing-investigation_2026-07-21.md  RPT-008_integrations-license-research_2026-07-22.md  RPT-009_properdocs-license_2026-07-23.md  RPT-010_obj-group-names_2026-07-23.md  RPT-011_solver-defaults_2026-07-23.md  RPT-012_bulk-separation-spelling_2026-07-23.md
reports/compat/: CMP-26120_2026-07-21.md  CMP-26120_2026-07-21.yaml  CMP-26120_2026-07-21_full.md  CMP-26120_2026-07-21_full.yaml  CMP-26120_2026-07-23_pln012.md  CMP-26120_2026-07-23_pln012.yaml  README.md
reports/fsi/: PILOT-26120_2026-07-21_frozen_convergence.csv  PILOT-26120_2026-07-21_nearrigid_convergence.csv  PILOT-26120_2026-07-21_soft_convergence.csv
reports/physics/: DRF-26100-26120_2026-07-21.md  DRF-26100-26120_2026-07-21.yaml  DRF-26100-26120_2026-07-21_complete.md  DRF-26100-26120_2026-07-21_complete.yaml  DRF-26120-26120_2026-07-21_self.md  DRF-26120-26120_2026-07-21_self.yaml  PHY-26100_2026-07-21_smi01-triage-rerun.md  PHY-26100_2026-07-21_smi01-triage-rerun.yaml  PHY-26120_2026-07-21.md  PHY-26120_2026-07-21.yaml  PHY-26120_2026-07-21_banded.md  PHY-26120_2026-07-21_banded.yaml  PHY-26120_2026-07-21_full.md  PHY-26120_2026-07-21_full.yaml  PHY-26120_2026-07-21_phy02-symmetry-phase-reval.md  PHY-26120_2026-07-21_phy02-symmetry-phase-reval.yaml  PHY-26120_2026-07-21_phy02.md  PHY-26120_2026-07-21_phy02.yaml  PHY-26120_2026-07-21_phy05-phy06-banded.md  PHY-26120_2026-07-21_phy05-phy06-banded.yaml  PHY-26120_2026-07-21_phy05-phy06-first.md  PHY-26120_2026-07-21_phy05-phy06-first.yaml  PHY-26120_2026-07-21_phy06-polar-banded.md  PHY-26120_2026-07-21_phy06-polar-banded.yaml  PHY-26120_2026-07-21_phy06-polar-first.md  PHY-26120_2026-07-21_phy06-polar-first.yaml  PHY-26120_2026-07-21_smi.md  PHY-26120_2026-07-21_smi.yaml  PHY-26120_2026-07-21_smi01-triage-rerun.md  PHY-26120_2026-07-21_smi01-triage-rerun.yaml  PHY-26120_2026-07-23_reseed-cp100-2026-07-23.md  PHY-26120_2026-07-23_reseed-cp100-2026-07-23.yaml  README.md  TRI-SMI01-CMy_2026-07-21.md
scripts/: build-guide.ps1  docs_hooks.py  gen_docs_pages.py
src/pyflightstream/: __init__.py  _deprecations.py  exceptions.py  options.py  overview.py  reference.py  testing.py  versions.py
tests/: conftest.py  test_cases.py  test_command_db.py  test_conventions.py  test_deprecation_deadline.py  test_error_messages.py  test_examples_isolation.py  test_exceptions_catalog.py  test_farfield.py  test_files.py  test_fsi_beam.py  test_fsi_centrifugal.py  test_fsi_cli.py  test_fsi_config.py  test_fsi_driver.py  test_fsi_kinematics.py  test_fsi_loads.py  test_fsi_sources.py  test_fsi_wing.py  test_guide_api_names.py  test_house_style.py  test_matrix.py  test_matrix_cli.py  test_matrix_legacy.py  test_matrix_run.py  test_metadata_currency.py  test_options.py  test_overview.py  test_package_imports.py  test_post_writers.py  test_probes.py  test_probes_geometry.py  test_probes_planar.py  test_public_api.py  test_push_gate.py  test_qa_compat.py  test_qa_drift.py  test_qa_geometry.py  test_qa_physics.py  test_qa_probes.py  (+16 more)
tests/fixtures/: loads_steady_26.120.txt  loads_truncated_26.120.txt  matrix.fs  (+5 more)
(+92 files in other folders)
