[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyflightstream"
version = "0.1.0"
description = "Version-aware, didactic Python driver for the FlightStream panel-method solver"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Geovana Neves"}]
requires-python = ">=3.11"
# xarray confirmed as a runtime dependency by the author's far-field
# extraction instruction of 2026-07-21 (PLN-006 closed): the farfield
# ledgers live on labeled (station, r, psi) arrays.
dependencies = [
    "numpy",
    "pandas",
    "pydantic",
    "pyyaml",
    "xarray",
]

[project.optional-dependencies]
plot = ["matplotlib"]
# FSI structural coupling (M6, DLV-007). PyNiteFEA is MIT; license
# evidence: reports/RPT-002_pynitefea-license_2026-07-21.md (NFR-02).
fsi = ["PyNiteFEA>=3.0"]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
]

[project.scripts]
pyfs-qa = "pyflightstream.qa.cli:main"
pyfs-fsi = "pyflightstream.fsi.cli:main"

[project.urls]
Repository = "https://github.com/nevesgeovana/pyflightstream"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pyflightstream.commands" = ["*.yaml"]
"pyflightstream.qa" = ["references/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "needs_flightstream: requires a local FlightStream installation and license",
    "validity: tier 2 per-command probe tests",
    "physics: tier 3 physics regression matrix (slow)",
]
addopts = "-m 'not needs_flightstream'"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "N", "D"]
# N803/N806 exempted so aerodynamic symbols (CL, CDi, J, alpha_deg) keep
# their standard names (SAD Section 12).
ignore = ["N803", "N806"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
