[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyflightstream"
version = "0.2.0"
description = "Version-aware, didactic Python driver for the FlightStream panel-method solver"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Geovana Neves"}]
requires-python = ">=3.11"
# PyPA well-known metadata (audit 2026-07-23). The SPDX license
# expression form is deferred with the VCS-versioning item: it needs a
# setuptools floor bump, and the build toolchain does not move in a
# release week (PLN-024).
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
# xarray confirmed as a runtime dependency by the author's far-field
# extraction instruction of 2026-07-21 (PLN-006 closed): the farfield
# ledgers live on labeled (station, r, psi) arrays.
dependencies = [
    "numpy",
    "pandas",
    "pydantic",
    "pyyaml",
    "xarray",
]

[project.optional-dependencies]
plot = ["matplotlib"]
# Geometry gate of the probe planner: containment culling and
# distance-to-surface queries (license evidence reports/RPT-003).
geom = ["trimesh", "rtree", "scipy"]
# FSI structural coupling (M6, DLV-007). PyNiteFEA is MIT; license
# evidence: reports/RPT-002_pynitefea-license_2026-07-21.md (NFR-02).
fsi = ["PyNiteFEA>=3.0"]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
    # Docs build tool (license evidence: reports/RPT-009). The material
    # theme and the nav plugins keep their mkdocs package names and
    # still pull the mkdocs library during the ecosystem transition.
    "properdocs",
    "mkdocs-material",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
]

[project.scripts]
pyfs-qa = "pyflightstream.qa.cli:main"
pyfs-fsi = "pyflightstream.fsi.cli:main"
pyfs-workspace = "pyflightstream.workspace.cli:main"
pyfs-matrix = "pyflightstream.cases.cli:main"

[project.urls]
Repository = "https://github.com/nevesgeovana/pyflightstream"
Documentation = "https://nevesgeovana.github.io/pyflightstream/"
Changelog = "https://github.com/nevesgeovana/pyflightstream/blob/main/CHANGELOG.md"
Issues = "https://github.com/nevesgeovana/pyflightstream/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pyflightstream.commands" = ["*.yaml"]
"pyflightstream.qa" = ["references/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "needs_flightstream: requires a local FlightStream installation and license",
    "validity: tier 2 per-command probe tests",
    "physics: tier 3 physics regression matrix (slow)",
]
addopts = "-m 'not needs_flightstream'"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "N", "D"]
# N803/N806 exempted so aerodynamic symbols (CL, CDi, J, alpha_deg) keep
# their standard names (SAD Section 12).
ignore = ["N803", "N806"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
